--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongoose": "^6.5.1",
+    "uuid": "^8.3.2",
+    "uuid-mongodb": "^2.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
