--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 version: '3'
 
 services:
-  # app:
-  #   stdin_open: true
-  #   depends_on:
-  #     - mongo
-  #   build:
-  #     context: .
-  #     dockerfile: docker/Dockerfile
-  #   volumes:
-  #     - .:/app
+  app:
+    stdin_open: true
+    depends_on:
+      - mongo
+    build:
+      context: .
+      dockerfile: docker/Dockerfile
+    ports:
+      - "8080:8080"
 
   mongo:
     stdin_open: true
