--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "2.8.5",
     "express": "4.18.1",
     "mongoose": "5.13.14",
     "uuid-mongodb": "2.5.1"
