--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,13 @@ services:
     ports:
       - "8080:8080"
 
+  front:
+    build:
+      context: .
+      dockerfile: docker/FrontDockerfile
+    ports:
+      - "8081:80"
+
   mongo:
     stdin_open: true
     image: mongo:4.2.15
